--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,14 +5,21 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
 http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 <display-name>Spring MVC Application</display-name>
 <servlet>
-<servlet-name>HelloWeb</servlet-name>
+<servlet-name>JavaWebProject</servlet-name>
 <servlet-class>
 org.springframework.web.servlet.DispatcherServlet
 </servlet-class>
 <load-on-startup>1</load-on-startup>
 </servlet>
 <servlet-mapping>
-<servlet-name>HelloWeb</servlet-name>
+<servlet-name>JavaWebProject</servlet-name>
 <url-pattern>/</url-pattern>
 </servlet-mapping>
+<context-param>
+	<param-name>contextConfigLocation</param-name>
+	<param-value>/WEB-INF/JavaWebProject-servlet.xml</param-value> 
+</context-param> 
+<listener> 
+	<listener-class> org.springframework.web.context.ContextLoaderListener </listener-class> 
+</listener>
 </web-app>
