--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,6 +11,22 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 		</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+		<filter>  
+        <filter-name>characterEncodingFilter</filter-name>  
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>  
+        <init-param>  
+            <param-name>encoding</param-name>  
+            <param-value>UTF-8</param-value>  
+        </init-param>  
+        <init-param>  
+            <param-name>forceEncoding</param-name>  
+            <param-value>true</param-value>  
+        </init-param>  
+    </filter>  
+    <filter-mapping>  
+        <filter-name>characterEncodingFilter</filter-name>  
+        <url-pattern>/*</url-pattern>  
+    </filter-mapping> 
 	<servlet-mapping>
 		<servlet-name>JavaWebProject</servlet-name>
 		<url-pattern>/</url-pattern>
@@ -22,4 +38,5 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<listener> 
 		<listener-class> org.springframework.web.context.ContextLoaderListener </listener-class> 
 	</listener>
+ 
 </web-app>
